[package]
name = "tchtut"
version = "0.1.0"
authors = ["vegapit"]
edition = "2018"

[dependencies]
tch = { git = 'https://github.com/LaurentMazare/tch-rs' }
indicatif = "0.11"
plotters = "0.2"

[lib]
crate-type = ["dylib","rlib"]

[[example]]
name = "kuhnpokerpg"
path = "examples/kuhnpokerpg.rs"

[[example]]
name = "impliedvol"
path = "examples/impliedvol.rs"

[[example]]
name = "blackpricing"
path = "examples/blackpricing.rs"